deploy: 7a5ba45022a205e7e20c29392b42bbbcd2f72adc

--- a/genindex.html
+++ b/genindex.html
@@ -2498,6 +2498,8 @@
 </li>
       <li><a href="_gen/espnet2.bin.html#module-espnet2.bin.asr_inference">espnet2.bin.asr_inference (module)</a>
 </li>
+      <li><a href="_gen/espnet2.bin.html#module-espnet2.bin.asr_inference_hidden">espnet2.bin.asr_inference_hidden (module)</a>
+</li>
       <li><a href="_gen/espnet2.bin.html#module-espnet2.bin.asr_inference_maskctc">espnet2.bin.asr_inference_maskctc (module)</a>
 </li>
       <li><a href="_gen/espnet2.bin.html#module-espnet2.bin.asr_inference_streaming">espnet2.bin.asr_inference_streaming (module)</a>
@@ -4177,6 +4179,8 @@
       <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference.Speech2Text.from_pretrained">from_pretrained() (espnet2.bin.asr_inference.Speech2Text static method)</a>
 
       <ul>
+        <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference_hidden.Speech2Text.from_pretrained">(espnet2.bin.asr_inference_hidden.Speech2Text static method)</a>
+</li>
         <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference_maskctc.Speech2Text.from_pretrained">(espnet2.bin.asr_inference_maskctc.Speech2Text static method)</a>
 </li>
         <li><a href="_gen/espnet2.bin.html#espnet2.bin.diar_inference.DiarizeSpeech.from_pretrained">(espnet2.bin.diar_inference.DiarizeSpeech static method)</a>
@@ -4396,6 +4400,8 @@
         <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_align.get_parser">(in module espnet2.bin.asr_align)</a>
 </li>
         <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference.get_parser">(in module espnet2.bin.asr_inference)</a>
+</li>
+        <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference_hidden.get_parser">(in module espnet2.bin.asr_inference_hidden)</a>
 </li>
         <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference_maskctc.get_parser">(in module espnet2.bin.asr_inference_maskctc)</a>
 </li>
@@ -4748,6 +4754,8 @@
         <li><a href="_gen/espnet2.tts.html#espnet2.tts.transformer.transformer.Transformer.inference">(espnet2.tts.transformer.transformer.Transformer method)</a>
 </li>
         <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference.inference">(in module espnet2.bin.asr_inference)</a>
+</li>
+        <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference_hidden.inference">(in module espnet2.bin.asr_inference_hidden)</a>
 </li>
         <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference_maskctc.inference">(in module espnet2.bin.asr_inference_maskctc)</a>
 </li>
@@ -5210,6 +5218,8 @@
         <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_align.main">(in module espnet2.bin.asr_align)</a>
 </li>
         <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference.main">(in module espnet2.bin.asr_inference)</a>
+</li>
+        <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference_hidden.main">(in module espnet2.bin.asr_inference_hidden)</a>
 </li>
         <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference_maskctc.main">(in module espnet2.bin.asr_inference_maskctc)</a>
 </li>
@@ -6514,10 +6524,10 @@
 </li>
       <li><a href="_gen/espnet2.layers.html#espnet2.layers.sinc_conv.SincConv">SincConv (class in espnet2.layers.sinc_conv)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_gen/espnet2.enh.html#espnet2.enh.layers.dprnn.SingleRNN">SingleRNN (class in espnet2.enh.layers.dprnn)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_gen/espnet2.enh.html#espnet2.enh.loss.criterions.time_domain.SISNRLoss">SISNRLoss (class in espnet2.enh.loss.criterions.time_domain)</a>
 </li>
       <li><a href="_gen/espnet2.utils.html#espnet2.utils.sized_dict.SizedDict">SizedDict (class in espnet2.utils.sized_dict)</a>
@@ -6595,6 +6605,8 @@
       <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference.Speech2Text">Speech2Text (class in espnet2.bin.asr_inference)</a>
 
       <ul>
+        <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference_hidden.Speech2Text">(class in espnet2.bin.asr_inference_hidden)</a>
+</li>
         <li><a href="_gen/espnet2.bin.html#espnet2.bin.asr_inference_maskctc.Speech2Text">(class in espnet2.bin.asr_inference_maskctc)</a>
 </li>
         <li><a href="_gen/espnet2.bin.html#espnet2.bin.st_inference.Speech2Text">(class in espnet2.bin.st_inference)</a>
