--- a/_modules/index.html
+++ b/_modules/index.html
@@ -387,6 +387,7 @@
 <li><a href="espnet2/bin/aggregate_stats_dirs.html">espnet2.bin.aggregate_stats_dirs</a></li>
 <li><a href="espnet2/bin/asr_align.html">espnet2.bin.asr_align</a></li>
 <li><a href="espnet2/bin/asr_inference.html">espnet2.bin.asr_inference</a></li>
+<li><a href="espnet2/bin/asr_inference_hidden.html">espnet2.bin.asr_inference_hidden</a></li>
 <li><a href="espnet2/bin/asr_inference_maskctc.html">espnet2.bin.asr_inference_maskctc</a></li>
 <li><a href="espnet2/bin/asr_inference_streaming.html">espnet2.bin.asr_inference_streaming</a></li>
 <li><a href="espnet2/bin/asr_train.html">espnet2.bin.asr_train</a></li>
